--- a/index.html
+++ b/index.html
@@ -4,51 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slider</title>
+    <title>Image Slider</title>
 
-    <!-- Adding jquery and css stylesheet -->
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- Adding css stylesheet, jquery and font -->
+    <link rel="stylesheet" href="styles/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+    <!-- Adding js script -->
+    <script defer src="main2.js"></script> 
 </head>
 
 <body>
 
     <div id="container">
 
-        <header><a id="header" href="index.html">Image Slider</a></header>
+        <header></header>
 
-        <aside>This is an image slider web app made for an assignment.
-            <h1>Lorem Ipsum</h1>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida purus et bibendum consequat. Praesent vehicula mi leo, a rutrum magna tincidunt vel. 
-            Donec porta venenatis consectetur. Curabitur quis ultricies risus. Nam condimentum aliquet tellus ac molestie. Praesent iaculis nisl tortor, 
-            id tempor justo pretium id. Nam vel volutpat felis. Integer consectetur mauris eleifend volutpat convallis. 
+       <aside>
+            <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
+            <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
+                Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+            </p>
         </aside>
 
         <main>
             <div class="flex-container-1">
-                <img id="row1img0" src="assets/slider-image-1.jpg" alt="">
-                <img id="row1img1" src="assets/slider-image-2.jpg" alt="">
-                <img id="row1img2" src="assets/slider-image-3.jpg" alt="">
-                <img id="row1img3" src="assets/slider-image-4.jpg" alt="">
-                <img id="row1img4" src="assets/slider-image-5.jpg" alt="">
+                <img class="row1" src="assets/slider-image-1.jpg" alt="">
+                <img class="row1" src="assets/slider-image-2.jpg" alt="">
+                <img class="row1" src="assets/slider-image-3.jpg" alt="">
+                <img class="row1" src="assets/slider-image-4.jpg" alt="">
+                <img class="row1" src="assets/slider-image-5.jpg" alt="">
             </div>
             <div class="flex-container-2">
-                <img id="row2img0" src="assets/slider-image-6.jpg" alt="">
-                <img id="row2img1" src="assets/slider-image-7.jpg" alt="">
-                <img id="row2img2" src="assets/slider-image-8.jpg" alt="">
-                <img id="row2img3" src="assets/slider-image-9.jpg" alt="">
+                <div class="flex-container-images">
+                    <img class="row2" src="assets/slider-image-6.jpg" alt="">
+                    <img class="row2" src="assets/slider-image-7.jpg" alt="">
+                    <img class="row2" src="assets/slider-image-8.jpg" alt="">
+                    <img class="row2" src="assets/slider-image-9.jpg" alt="">
+                </div>
+                <div class="flex-container-buttons">
+                    <button id="arrowLeft"></button>
+                    <button id="arrowRight"></button>
+                </div> 
             </div> 
-            <div class="arrows">
-                <img class="arrow" id="arrowLeft" src="assets/arrow-blue-left.png" alt="">
-                <img class="arrow" id="arrowRight" src="assets/arrow-blue-right.png" alt="">
-            </div>
+        
         </main>
 
-        <footer>Made by: Mihael Marjanović, 2022</footer>
+        <footer></footer>
 
     </div>
-    <!-- Adding js script -->
-    <script src="main.js"></script> 
 </body>
-
 </html>
