--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <title>Image Slider</title>
 
     <!-- Adding css stylesheet, jquery and font -->
-    <link rel="stylesheet" href="styles/css/style.css">
+    <link rel="stylesheet" href="styles/css/style.min.css">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-    <!-- Adding js script -->
-    <script defer src="main2.js"></script> 
 </head>
 
 <body>
@@ -41,6 +39,8 @@
                     <img class="row2" src="assets/slider-image-7.jpg" alt="">
                     <img class="row2" src="assets/slider-image-8.jpg" alt="">
                     <img class="row2" src="assets/slider-image-9.jpg" alt="">
+                    <img class="row2" src="assets/slider-image-1.jpg" alt="">
+                    <img class="row2" src="assets/slider-image-2.jpg" alt="">
                 </div>
                 <div class="flex-container-buttons">
                     <button id="arrowLeft"></button>
@@ -53,5 +53,7 @@
         <footer></footer>
 
     </div>
+    <!-- Adding js script -->
+    <script defer src="main2.min.js"></script>
 </body>
 </html>
