Treća ispravka koda - ispravljen CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <div id="container">
 
-        <header></header>
+        <header>
+            <div class="box1"></div>
+            <div class="box2"><div class="headerFooterText">Skup drugih elemenata na stranici</div></div>
+        </header>
 
        <aside>
             <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
@@ -50,7 +53,7 @@
         
         </main>
 
-        <footer></footer>
+        <footer><div class="headerFooterText">Skup drugih elemenata na stranici</div></footer>
 
     </div>
     <!-- Adding js script -->
